@@ -17,6 +17,7 @@
  */
 package org.apache.zookeeper.cli;
 
+@SuppressWarnings("serial")
 public class MalformedCommandException extends CliException {
     public MalformedCommandException(String message) {
         super(message);
